# argocd-multi-cluster-hub-spoke-platform

./: .gitignore  README.md
.github/workflows/: ci.yaml
applications/dagster-project/: .dockerignore  Dockerfile  README.md  build-push.sh  pyproject.toml  requirements.txt  setup.py
applications/dagster-project/dagster_project/: __init__.py  definitions.py  telemetry.py
applications/dagster-project/dagster_project/assets/: __init__.py  hackernews.py  simple_examples.py  weather_pipeline.py
applications/dagster-project/dagster_project/jobs/: __init__.py
applications/dagster-project/dagster_project/partitions/: __init__.py
applications/dagster-project/dagster_project/resources/: __init__.py  resources.py
applications/dagster-project/dagster_project/sensors/: __init__.py  failure_sensor.py
applications/dagster-project/tests/: test_assets.py
bootstrap/terraform-backend/: .gitignore  README.md  data.tf  kms.tf  outputs.tf  s3-backend.tf  terraform.auto.tfvars  variables.tf  versions.tf
docs/: ARCHITECTURE.md  HUB_SPOKE_PATTERN.md  MIGRATION_FROM_OLD_STRUCTURE.md  MULTI_CLUSTER.md  TROUBLESHOOTING.md
gitops/infrastructure/: app-of-apps.yaml  core-apps.yaml  observability-apps.yaml
infrastructure/hub/: eks.tf  iam.tf  main.tf  outputs.tf  security-groups.tf  variables.tf  vpc.tf
infrastructure/shared/: acm.tf  cloudwatch-alarms.tf  cognito.tf  ecr.tf  fluent-bit.tf  main.tf  (+6 more)
scripts/: deploy-hub.sh  deploy-spoke.sh  diagnose-user-code.sh  register-cluster.sh  restart-daemon.sh  upgrade-dagster.sh  verify-depersonalization.sh  verify-deployment.sh
(+63 files in other folders)
